GNOME Bugzilla – Bug 748906
Typo: addresss + do not translate an empty message
Last modified: 2015-05-04 16:40:28 UTC
Created attachment 302880 [details] [review] Patch to fix the issues Thanks for reviewing the patch
applied to master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=f851a741a6657732e08d51ec7539a82605acfbab nm-1-0: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=1588a14a8bfd72350390da6f836e37502ad29925 Thank you