fix typo and do not translate an empty string

https://bugzilla.gnome.org/show_bug.cgi?id=748906